[project]
name = "recipe-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "google-genai>=1.10.0",
    "google-generativeai>=0.8.4",
    "pillow>=11.1.0",
    "pymongo>=4.12.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
]
